...
<string name="action_settings">"Settings"</string>
<string name="action_remove">"Remove"</string>
<string name="home_menu_routines">"ROUTINES"</string>
<string name="home_menu_medicines">"MEDICINES"</string>
<string name="home_menu_pharmacies">"Pharmacies"</string>
<string name="home_menu_plantrip">"Plan trip"</string>
<string name="medicine">"medicine"</string>
<string name="drawer_help_option">"Tour"</string>
<string name="drawer_settings_option">"Settings"</string>
<string name="drawer_about_option">"About"</string>
<string name="title_activity_routines">"Routines"</string>
<string name="title_edit_routine_activity">"Edit routine"</string>
<string name="title_create_routine_activity">"Create routine"</string>
...
<string name="meds_time">"Remember to take your meds"</string>
<string name="meds_time_lost">"Alarm lost"</string>
<string name="title_select_dose_dialog">"Select a dose"</string>
<string name="doses_and_times">"Times and doses"</string>
<string name="schedule_repeat_days">"Repeat"</string>
<string name="summary_title">"Check and confirm"</string>
<string name="summary">"Summary"</string>
<string name="pills">"Pills"</string>
<string name="capsules">"Capsules"</string>
<string name="inhaler">"Inhaler"</string>
<string name="drops">"Drops"</string>
<string name="pomade">"Pomade"</string>
<string name="syrup">"Syrup"</string>
<string name="spray">"Spray"</string>
<string name="patches">"Patches"</string>
<string name="unknown">"Unknown"</string>
<string name="effervescent">"Effervescent"</string>
<string name="schedule">"Schedule"</string>
<plurals name="injections_units">
<item quantity="one">"injection"</item>
<item quantity="other">"injections"</item>
</plurals>
<plurals name="pills_units">
<item quantity="one">"pill"</item>
...
<string name="every_day">"Every day"</string>
<string name="once_a_day">"Once a day"</string>
<string name="twice_a_day">"Twice a day"</string>
<string name="tree_times_a_day">"Three times a day"</string>
<string name="four_times_a_day">"Four times a day"</string>
<string name="times_a_day">"times a day"</string>
<string name="and">"and"</string>
<string name="routine_breakfast">"Breakfast"</string>
<string name="routine_lunch">"Lunch"</string>
<string name="routine_dinner">"Dinner"</string>
<string name="schedule_timetable_time_column">"TIME"</string>
<string name="schedule_timetable_dose_column">"DOSE"</string>
<string name="take">"Take"</string>
<string name="first_intake">"First intake at"</string>
<string name="day_monday_short">"Mon"</string>
<string name="day_tuesday_short">"Tue"</string>
<string name="day_wednesday_short">"Wed"</string>
<string name="day_thursday_short">"Thu"</string>
<string name="day_friday_short">"Fri"</string>
<string name="day_saturday_short">"Sat"</string>
<string name="day_sunday_short">"Sun"</string>
<string name="schedule_day_selector_mo">"MO"</string>
<string name="schedule_day_selector_tu">"TU"</string>
<string name="schedule_day_selector_we">"WE"</string>
<string name="schedule_day_selector_th">"TH"</string>
<string name="schedule_day_selector_fr">"FR"</string>
<string name="schedule_day_selector_sa">"SA"</string>
<string name="schedule_day_selector_su">"SU"</string>
<string name="schedule_day_selector_none">"NONE"</string>
<string name="agenda_zoom_meds_time">"It's time to take some meds!"</string>
<string name="create_schedule_unselected_med">"Select a med in order to create a schedule"</string>
<string name="create_schedule_incomplete_items">"Select routines for all your intakes"</string>
<string name="create_schedule_incomplete_doses">"Doses must be greater than zero"</string>
...
