<!--
  ~    Calendula - An assistant for personal medication management.
  ~    Copyright (C) 2014-2018 CiTIUS - University of Santiago de Compostela
  ~
  ~    Calendula is free software; you can redistribute it and/or modify
  ~    it under the terms of the GNU General Public License as published by
  ~    the Free Software Foundation; either version 3 of the License, or
  ~    (at your option) any later version.
  ~
  ~    This program is distributed in the hope that it will be useful,
  ~    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~    GNU General Public License for more details.
  ~
  ~    You should have received a copy of the GNU General Public License
  ~    along with this software.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/summaryTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/summary_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/android_blue"
        android:textSize="20dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/sched_summary_medname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sched_summary_medicon"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/medicine_unselected"
        android:textColor="@color/android_blue_dark"
        android:textSize="18dp"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/sched_summary_medicon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/summaryTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_presentation_2"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/sched_summary_medi_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sched_summary_medname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        tools:text="Every day"
        android:textColor="@color/dark_grey_text"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/sched_summary_medi_dailyfreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sched_summary_medi_days"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        tools:text="Three times a day"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/android_blue"
        android:textSize="18dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_show_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sched_summary_medi_dailyfreq"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/summary_show_calendar"/>

</RelativeLayout>
