...
    android:paddingTop="@dimen/status_bar_height">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs"
        android:background="#fff" />

    <ImageView
        android:id="@+id/tabs_shadow"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
...
        android:paddingTop="10dp"
        android:text="@string/title_create_schedule_activity"
        android:textColor="#fff"
        android:textSize="24sp" />

    <!--<com.melnykov.fab.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/add_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_gravity="bottom|right"-->
    <!--android:layout_marginRight="38dp"-->
...
