...
                    android:text="@string/schedule_help_no_type_selected"
                    android:textColor="#cc222222"/>

            </RelativeLayout>

            <ImageButton
                android:id="@+id/schedule_help_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_container"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
...
                    android:text="@string/schedule"
                    android:textColor="#bfbfbf"
                    android:textSize="15dp"
                    android:visibility="visible"/>

                <Spinner
                    android:id="@+id/schedules_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/schedule_label"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
...
